# GraCFL

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  readme.txt  run_script.sh  run_script_all.sh  run_script_paper.sh  run_script_paper_long.sh  run_script_paper_short.sh
include/: globals-new.hpp  globals-par.hpp  globals.hpp  grammar.hpp
simple-algos/edge-centric/: E-centric-BI-GrammarDriven-Parallel.cpp  E-centric-BI-Topo-Driven-Rule-lookup.cpp  e-fw.cpp  edge-centric-rule-lookup.cpp  edge-centric.cpp  globals.hpp  grammar.hpp
simple-algos/profile-scripts/: genHisto-2.py  genHisto-3.py  genHisto.py
simple-algos/standard-algo/: .gitignore  globals.hpp  grammar.hpp  standard-algo-batch-pocr.cpp  standard-algo-batch.cpp  standard-algo-sameitr-hashset-time.cpp
simple-algos/vertex-centric/: globals-new.hpp  grammar.hpp  v-centric-bi-g-driven-lbl_first_list-alt-1-two-loops.cpp  v-centric-bi-g-driven-lbl_first_list.cpp  v-centric-bi-vec-copy.cpp  v-centric-fw-g-driven-vtx_first-parallel-two_list.cpp  v-centric-fw_bi-g-driven-lbl_first-two_loops.cpp  v-centric-fw_bi-g-driven-lbl_first-worklist.cpp  v-centric-fw_bi-tmp-ptr-lookup.cpp  v-centric-fw_bw-g-driven-lbl_first-super-steps.cpp  v-centric-fw_bw-g-driven-lbl_first.cpp
src/e-centric/: .gitignore  e-centric-bi-grammar_driven  e-centric-bi-grammar_driven-parallel.cpp  e-centric-bi-grammar_driven.cpp  e-centric-bi-topo_driven-basic.cpp  e-centric-bi-topo_driven-rule_lookup.cpp  e-centric-fw.cpp  e-centric-topo_driven-basic.cpp  globals-bi.hpp
src/standard-algo/: standard-algo-batch-memory.cpp  standard-algo-sameitr.cpp
src/v-centric/: .gitignore  globals-parallel.hpp  v-centric-bi-grammar_driven-label_indexed-parallel.cpp  v-centric-bi-grammar_driven-label_indexed-vec_copy.cpp  v-centric-bi-grammar_driven-label_indexed.cpp  v-centric-bi-grammar_driven-vtx_indexed.cpp  v-centric-bi-tmp-ptr-lookup.cpp  v-centric-bi-topo_driven-sliding_ptrs-rule_lookup.cpp  v-centric-bi-topo_driven-sliding_ptrs.cpp  v-centric-bi-topo_driven-vec_copy.cpp  v-centric-bw-grammar_driven-label_indexed.cpp  v-centric-bw-sliding_ptrs-rule_lookup.cpp  v-centric-fw-g-driven-lbl_first-memory.cpp  v-centric-fw-g-driven-lbl_first-two_loops.cpp  v-centric-fw-grammar_driven-label_indexed-parallel.cpp  v-centric-fw-grammar_driven-label_indexed.cpp  v-centric-fw-grammar_driven-vec_copy.cpp  v-centric-fw-grammar_driven-vtx_indexed-parallel.cpp  v-centric-fw-grammar_driven-vtx_indexed.cpp  v-centric-fw_bi-g-driven-lbl_first-two_loops-alt.cpp  v-centric-fw_bi-g-driven-lbl_first.cpp
src/v-centric/v-dataflow/: v-centric-fw_bi-g-driven-lbl_first-df.cpp
src/vertex-centric/: globals.hpp  v-centric-bi-g-driven-lbl_first_list-alt-1.cpp  v-centric-fw-g-driven-lbl_first-parallel.cpp  v-centric-fw-g-driven-lbl_first.cpp  v-centric-fw-vec-copy.cpp  v-centric-fw_bi-g-driven-lbl_first-two_loops-profile.cpp  v-centric-fw_bi-lookup-opt.cpp  v-centric-fw_bi-tmp-ptr.cpp  v-centric-fw_bi-vec-copy.cpp  v-centric-fw_bw-g-driven-lbl_first-two_loop.cpp
